--- a/app/src/main/res/layout/fragment_locations.xml
+++ b/app/src/main/res/layout/fragment_locations.xml
@@ -18,7 +18,7 @@
         style="@style/header_style"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Ближайшие кофейни"
+        android:text="@string/cafe_close"
         app:layout_constraintBottom_toTopOf="@+id/guideline11"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
