--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -17,7 +17,7 @@
         style="@style/header_style"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Вход"
+        android:text="@string/login"
         app:layout_constraintBottom_toTopOf="@+id/guideline11"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1.1"
-            android:text="e-mail" />
+            android:text="@string/email" />
 
         <EditText
             android:id="@+id/email_input_login"
@@ -49,16 +49,17 @@
             android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="example@example.ru"
+            android:hint="@string/example_example_ru"
             android:inputType="textEmailAddress"
-            android:paddingTop="8dp" />
+            android:paddingTop="8dp"
+            android:autofillHints="" />
 
         <TextView
             style="@style/auth_text_style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1.1"
-            android:text="Пароль" />
+            android:text="@string/pass" />
 
         <EditText
             android:id="@+id/password_input_login"
@@ -68,9 +69,10 @@
             android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="******"
+            android:hint="@string/pass_invisible"
             android:inputType="textPassword"
-            android:paddingTop="8dp" />
+            android:paddingTop="8dp"
+            android:autofillHints="" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/login"
@@ -79,7 +81,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_weight="1"
-            android:text="Войти" />
+            android:text="@string/login_btn" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/go_to_registration"
@@ -88,7 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_weight="1"
-            android:text="Регистрация" />
+            android:text="@string/registration" />
     </LinearLayout>
 
     <androidx.constraintlayout.widget.Guideline
