--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -17,7 +17,7 @@
         style="@style/header_style"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Ваш заказ"
+        android:text="@string/order"
         app:layout_constraintBottom_toTopOf="@+id/guideline11113"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +31,7 @@
         android:layout_marginEnd="32dp"
         android:fontFamily="@font/sfuidisplay_bold"
         android:gravity="center"
-        android:text="Время ожидания заказа 15 минут! Спасибо, что выбрали нас!"
+        android:text="@string/payed_message"
         android:textColor="#846340"
         android:textSize="22sp"
         android:textStyle="bold"
@@ -50,7 +50,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
         android:layout_weight="1"
-        android:text="Оплатить"
+        android:text="@string/pay"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
