--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -2,7 +2,6 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
@@ -18,7 +17,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/sfuidisplay_bold"
-        android:text="TextView"
         android:textColor="#846340"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -34,7 +32,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/sfuidisplay_bold"
-        android:text="TextView"
         android:textColor="#AF9479"
         android:textSize="16sp"
         android:textStyle="normal"
@@ -72,7 +69,7 @@
             android:layout_weight="1.2"
             android:fontFamily="@font/sfuidisplay_bold"
             android:gravity="center"
-            android:text="0"
+            android:text="@string/_0"
             android:textColor="#846340" />
 
         <ImageView
